--- a/Styles/partials/_medias.scss
+++ b/Styles/partials/_medias.scss
@@ -66,4 +66,12 @@
     .barras {
         width: 150%;
     }
+
+    .banner {
+        flex-wrap: wrap;
+    }
+
+    .foto-personal {
+        width: 100px;
+    }
 }
