--- a/Styles/estilo.css
+++ b/Styles/estilo.css
@@ -5,6 +5,7 @@ header {
   overflow: hidden;
 }
 header .navegador {
+  z-index: 1;
   width: 100%;
   background-color: rgba(255, 255, 255, 0);
   transition: background-color 0.4s;
@@ -107,6 +108,14 @@ header .flecha span:nth-child(3) {
 body {
   background-color: rgb(26, 26, 26);
 }
+body::-webkit-scrollbar {
+  width: 10px;
+  color: rgb(26, 26, 26);
+}
+body::-webkit-scrollbar-thumb {
+  background-color: #4b4b50;
+  border-radius: 8px;
+}
 
 section {
   background-color: rgb(26, 26, 26);
@@ -120,6 +129,18 @@ section {
   background-image: url(https://t4.ftcdn.net/jpg/04/67/67/87/360_F_467678707_2HGvlibdCAbYS1cNxAgvdMissnB00eiY.jpg);
   background-size: cover;
   -webkit-background-clip: text;
+}
+.banner .foto-personal {
+  width: 360px;
+  height: 440px;
+}
+
+.seccion-gris {
+  background-color: #4b4b50;
+}
+
+.proyectos {
+  background-color: #4b4b50;
 }
 
 .proyectos-container {
@@ -154,9 +175,12 @@ section {
   transform: translate(-50%, -50%);
   display: none;
 }
+.proyectos-container .container2 .cargando {
+  display: block;
+}
 
 .pie {
-  background-color: rgb(26, 26, 26);
+  background-color: #4b4b50;
 }
 .pie a {
   color: #c237db;
@@ -236,6 +260,10 @@ section {
   -webkit-animation-delay: 0.6s;
           animation-delay: 0.6s;
 }
+.habilidades .titulos_barritas {
+  position: relative;
+  top: 7px;
+}
 
 @-webkit-keyframes flotante {
   0%, 100% {
@@ -255,7 +283,21 @@ section {
   }
 }
 iframe {
-  border-radius: 15%;
+  border-radius: 100px;
+}
+
+footer {
+  background-color: rgb(26, 26, 26);
+  margin-top: 10px;
+  margin-bottom: 0px;
+  height: 30px;
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
+}
+footer h6 {
+  margin: 0;
+  text-align: center;
+  color: black;
 }
 
 @media screen and (max-width: 480px) {
@@ -315,5 +357,11 @@ iframe {
   }
   .barras {
     width: 150%;
+  }
+  .banner {
+    flex-wrap: wrap;
+  }
+  .foto-personal {
+    width: 100px;
   }
 }/*# sourceMappingURL=estilo.css.map */
