--- a/Styles/partials/_header.scss
+++ b/Styles/partials/_header.scss
@@ -5,6 +5,7 @@ header {
     overflow: hidden;
 
     .navegador {
+        z-index: 1;
         width: 100%;
         background-color: rgba(255, 255, 255, 0);
         transition: background-color .4s;
