--- a/Styles/estilo.css
+++ b/Styles/estilo.css
@@ -26,6 +26,9 @@ header .navegador .menu-hamburguesa {
 }
 header .video-fondo {
   width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
   position: absolute;
   left: 0;
   top: 0;
@@ -35,11 +38,11 @@ header .fondo-responsive {
   display: none;
 }
 header .nombre {
-  margin-top: 250px;
+  margin-top: 50%;
 }
 header .flecha {
   position: absolute;
-  top: 85%;
+  bottom: 15%;
   left: 50%;
   transform: translate(-50%, -50%);
   transform: rotate(0deg);
@@ -297,7 +300,7 @@ footer {
 footer h6 {
   margin: 0;
   text-align: center;
-  color: black;
+  color: #fff;
 }
 
 @media screen and (max-width: 480px) {
@@ -309,13 +312,10 @@ footer h6 {
     top: 0;
     z-index: -1;
   }
-  header {
-    height: 60vh;
+  .p-container {
+    width: 130%;
   }
   .responsive-none {
-    display: none;
-  }
-  .video-fondo {
     display: none;
   }
   .proyectos {
@@ -349,8 +349,9 @@ footer h6 {
   .tarjeta {
     margin-right: 0 !important;
   }
-  .flecha {
-    display: none;
+  .mentalidad {
+    text-align: center !important;
+    margin: 0px !important;
   }
   .container2 {
     margin: 5px 0px;
@@ -363,5 +364,29 @@ footer h6 {
   }
   .foto-personal {
     width: 100px;
+  }
+  .form-contacto {
+    justify-content: center;
+  }
+  .form-contacto .form h3 {
+    text-align: center !important;
+    padding: 0px !important;
+    margin-top: 10px;
+  }
+  .form-contacto .form .form-container {
+    margin: 0px !important;
+  }
+}
+@media screen and (max-width: 1013px) {
+  .proyectos {
+    width: 100%;
+    justify-content: center !important;
+  }
+  .proyectos__titulo {
+    text-align: center;
+  }
+  .proyectos-container {
+    display: flex;
+    justify-content: center;
   }
 }/*# sourceMappingURL=estilo.css.map */
