--- a/Styles/estilo.css
+++ b/Styles/estilo.css
@@ -24,7 +24,7 @@ header .navegador .nav-enlaces:hover {
 header .navegador .menu-hamburguesa {
   color: #fff;
 }
-header .video-fondo {
+header .video-fond0 {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
