--- a/Styles/partials/_header.scss
+++ b/Styles/partials/_header.scss
@@ -29,7 +29,7 @@ header {
         }
     }
 
-    .video-fondo {
+    .video-fond0 {
         width: 100%;
         height: 100%;
         object-fit: cover;
